--- a/package.json
+++ b/package.json
@@ -2,14 +2,34 @@
   "name": "socket-connection",
   "version": "1.0.0",
   "description": "",
-  "main": "src/sindex.js",
+  "main": "src/client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-server": "node src/server.js",
+    "start-client": "node src/client.js",
+    "test": "npm-run-all --silent test-*",
+    "test-audit": "npm audit --audit-level=moderate",
+    "test-lint": "eslint ./*.js find ./config ./controllers ./database ./dto-schemas ./routes ./services ./utils ./test '*.js'",
+    "test-mocha": "find ./test -name '*.js' | xargs nyc mocha --exit"
   },
   "author": "ARJUN SASIKUMAR",
   "license": "ISC",
   "dependencies": {
+    "ethereumjs-tx": "^2.1.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "web3": "^1.2.11"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.22.0",
+    "it-each": "^0.4.0",
+    "mocha": "^8.0.1",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "sinon": "^9.0.2"
   }
 }
